@@ -6,6 +6,7 @@ copyright_holder = foobar
 copyright_year   = 2009
 
 ; authordep perl = 5.005
+; authordep List::MoreUtils = != 0.407
 
 [GatherDir]
 [ExecDir/BadlyPaddedName]
