@@ -1,6 +1,7 @@
 use strict;
 use warnings;
 use Test::More 0.88 tests => 1;
+use Test::Deep;
 
 use autodie;
 
@@ -12,10 +13,11 @@ my $authordeps =
 	0
     );
 
-is_deeply(
+cmp_deeply(
     $authordeps,
     [
       +{ perl => '5.005' },
+      +{ 'List::MoreUtils'=> '!= 0.407' },
       ( map { +{"Dist::Zilla::Plugin::$_" => '5.0'} } qw<AutoPrereqs Encoding ExecDir> ),
       ( map { +{"Dist::Zilla::Plugin::$_" => 0} } qw<GatherDir MetaYAML> ),
       +{ 'Software::License::Perl_5' => '0' },
